updates to server utility